Show admin link

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,7 @@
 {
+  "Home": "DE Home",
+  "About": "DE About",
+  "Admin": "DE Admin",
   "home": {
     "title": "DE The assignment by EightCap",
     "text1": "DE Create an application that has",
