--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,7 @@
 {
+  "Home": "EN Home",
+  "About": "EN About",
+  "Admin": "EN Admin",
     "home": {
         "title": "EN The assignment by EightCap",
         "text1": "EN Create an application that has",
