--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,4 +1,7 @@
 {
+  "Home": "FR Home",
+  "About": "FR About",
+  "Admin": "FR Admin",
   "home": {
     "title": "FR The assignment by EightCap",
     "text1": "FR Create an application that has",
