load translate for each module

--- a/src/assets/i18n/translates/public/de.json
+++ b/src/assets/i18n/translates/public/de.json
@@ -1,7 +1,5 @@
 {
-  "Home": "DE Home",
-  "About": "DE About",
-  "Admin": "DE Admin",
+  "text": "de admin",
   "home": {
     "title": "DE The assignment by EightCap",
     "text1": "DE Create an application that has",
